--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.example.chatsapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="true"
@@ -17,7 +18,9 @@
                 android:name=".SignUpActivity"
                 android:windowSoftInputMode="stateVisible">
         </activity>
-        <activity android:name=".FeedActivity">
+        <activity android:name=".FeedActivity"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity
                 android:name=".MainActivity"
