--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,18 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".UserListActivity">
+        </activity>
         <activity android:name=".ProfileActivity">
         </activity>
         <activity
                 android:name=".SignUpActivity"
                 android:windowSoftInputMode="stateVisible">
         </activity>
-        <activity android:name=".FeedActivity"
-                  android:screenOrientation="portrait"
-                  android:windowSoftInputMode="adjustResize|stateHidden">
+        <activity
+                android:name=".FeedActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity
                 android:name=".MainActivity"
